adicionado os apps finances e notify. o app finances está encarregado de trabalhar com a API para buscar e ações e armazenar as preferencias do usuário para cada ação individualmente. o app notify acaba de ser criado e vai permitir que o sistema monitore e notifique os usuarios de acordo com as preferencias de cada ação

--- a/static/site.css
+++ b/static/site.css
@@ -369,6 +369,20 @@ textarea:focus {
   .search-wrapper form {
     position: relative;
     z-index: 1; }
+
+    .search_selector {
+      width: 90%;
+      height: 40px;
+      border: 2px solid #ffffff;
+      font-size: 12px;
+      font-style: italic;
+      padding: 0 20px;
+      background-color: #000;
+      margin: 15px 0; }
+      @media only screen and (max-width: 767px) {
+        .search_selector {
+          width: 80%; } }
+
     .search-wrapper form input {
       width: 90%;
       height: 40px;
