--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -6,8 +6,7 @@
             <div class="col-12 h-100 d-flex flex-wrap align-items-center justify-content-between">
                 <!-- Footer Social Info -->
                 <div class="footer-social-info text-right">
-                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                    <p>2021 - Desenvolvido por <a href="https://www.linkedin.com/in/jcezarpaiva16/">Julio Cezar</a> para o desafio Inoa.</p>
                 </div>
             </div>
         </div>
