app terminado. precisa documentar e ajeitar pequenos detalhes

--- a/templates/finances/board.html
+++ b/templates/finances/board.html
@@ -114,7 +114,7 @@
                   </button>
 
                   <button class="btn btn-danger">
-                    <a style="color: white;" href="{% url 'remove_user_quote' quote.quote.symbol %}">Ancora de teste</a>
+                    <a style="color: white;" href="{% url 'remove_user_quote' quote.quote.symbol %}">Esquecer ação</a>
                   </button>
 
                   {% else %}
