--- a/templates/home.html
+++ b/templates/home.html
@@ -51,7 +51,7 @@
     <img width="100%"  src="{% static 'img/core-img/charts.svg' %}" alt="">
     <div class="top-left">
         <h5>Bem vindo ao TôLigado!</h5>
-        <p>Aqui você consegue ficar ON nas ações da Bovespa,<br>configura alertas, define preços para venda e compra e ainda monitora o mercado!</p>
+        <p>Aqui você consegue ficar ON nas ações da Bovespa ou mundo afora,<br>configura alertas, define preços para venda e compra e ainda monitora o mercado!</p>
         {% if not user.is_authenticated %}
         <button class="btn btn-success" onClick=goToLogin()>Acessar minha conta</button>
         <button class="btn btn-primary" onClick=goToRegister()>Ainda não tem conta? Crie agora!</button>
