--- a/templates/partials/_menu.html
+++ b/templates/partials/_menu.html
@@ -2,26 +2,8 @@
 <!-- ##### Header Area Start ##### -->
 <header class="header-area">
 
-        <!-- Top Header Area -->
-        <div class="top-header-area">
-            <div class="container h-100">
-                <div class="row h-100 align-items-center justify-content-between">
-                    <!-- Breaking News -->
-                    <div class="col-12 col-sm-6">
-                        <div class="breaking-news">
-                            <div id="breakingNewsTicker" class="ticker">
-                                <ul>
-                                    <!-- TODO: adicionar ações nesse carrousel -->
-                                    <li><a href="">Boas vindas!</a></li>
-                                    <li><a href="">Aqui você fica ON nos preços das ações da B3</a></li>
-                                    <li><a href="">Registre as ações que deseja monitorar e começe a ganhar dinheiro.</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <!-- Search Area -->
+        {% include 'partials/_search.html' %}
 
         <!-- Navbar Area -->
         <div class="delicious-main-menu">
