--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -1512,7 +1512,7 @@ textarea:focus {
         margin-bottom: 15px;
         border: none;
         border-left: 3px solid $bg-gray;
-        border-radius: 0;
+        border-radius: 3px;
         padding: 15px 30px;
         @include trans-duration(500ms);
         &:focus {
