--- a/templates/partials/_menu.html
+++ b/templates/partials/_menu.html
@@ -13,7 +13,10 @@
                     <nav class="classy-navbar justify-content-between" id="deliciousNav">
 
                         <!-- Logo -->
-                        <a class="nav-brand" href="{% url 'home' %}"><img  width="200px" src="{% static 'img/core-img/to_ligado.svg' %}" alt=""></a>
+                        <!-- gambiarra pra não quebrar o menu -->
+                        <div class="nav-brand" >
+                            {% include 'partials/_alerts.html' %}
+                        </div>
 
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
@@ -44,12 +47,6 @@
                                     <li><a href="{% url 'logout' %}">Sair</a></li>
                                     {% endif %}
                                 </ul>
-
-                                <!-- Formulario de busca -->
-                                <div class="search-btn">
-                                    <i class="fa fa-search" aria-hidden="true"></i>
-                                </div>
-                                <!-- Formulario de busca -->
 
                             </div>
                             <!-- Nav End -->
