--- a/templates/notify/email.html
+++ b/templates/notify/email.html
@@ -272,7 +272,7 @@
                                                                                                     você está
                                                                                                     monitorando chegou a
                                                                                                     {{currency}} {{regularMarketPrice}}.
-                                                                                                    <i>Uhuuuuuul!</i>
+                                                                                                    <i>Uhuuuuuul!</i> {{ status }}
                                                                                                     Comemore e confira aqui outros índices dessa ação:
                                                                                                 </td>
                                                                                             </tr>
