--- a/templates/partials/_alerts.html
+++ b/templates/partials/_alerts.html
@@ -1,8 +1,18 @@
 {% load static %}
 {% if messages %}
     {% for message in messages %}
-    <div class="alert alert-{{ message.tags }}" role="alert" style="height: 50px;">
+    <!-- <button data-toggle="alert" data-target=".alert-{{ message.tags }}">x</button>
+    <div class="alert alert-{{ message.tags }}" role="alert" style="height: 50px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)" aria-hidden="true">
         <p class="alert-{{ message.tags }}">{{ message }}</p>
-    </div>
+    </div> -->
+
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert" style="height: min-content; width: 400px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        <p class="alert-{{ message.tags }}">{{ message }}</p>
+      </div>
     {% endfor %}
+
+    
 {% endif %}
