--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -44,7 +44,12 @@
                                 <input type="password" class="form-control" name="password2" placeholder="Repita sua senha" required>
                             </div>
                             <div class="col-12 text-center">
-                                <button class="btn btn-success" type="submit">Criar sua conta</button>
+                                <button class="btn btn-success" type="submit">
+                                    <a style="color: white;" >Criar sua conta</a>
+                                </button>
+                                <button class="btn btn-primary">
+                                    <a style="color: white;" href="{% url 'login' %}">Já tem conta? Faça login</a>
+                                </button>
                             </div>
                         </div>
                     </form>
